fix: read more visibility links fixed

--- a/greenlifecms/static/css/greenlifecms.css
+++ b/greenlifecms/static/css/greenlifecms.css
@@ -110,3 +110,8 @@ footer li {
 .page span, .page a {
     margin: 1rem;
 }
+
+div#app-available * {
+    display: flex;
+    justify-content: center;
+}
